<resources>
    <string name="app_name">RoomSupervisor</string>
    <string name="light_on_name">照明 ON</string>
    <string name="light_off_name">照明 OFF</string>
    <string name="wake_on_lan_name">Wake On LAN</string>
    <string name="button_name4">ボタン 4</string>
    <string name="button_name5">ボタン 5</string>
    <string name="wake_up_time">目覚まし設定時刻：%1$s</string>
    <string name="set_time_name">時刻を変更</string>
    <string name="alarm_name">目覚ましをセット</string>
    <string name="alarm">wake_up_at_</string>
    <string name="remove_name">目覚ましの設定を削除</string>
    <string name="remove_all">remove_all_atq</string>
</resources>
